--- a/testimony.css
+++ b/testimony.css
@@ -7,13 +7,8 @@
 }
 
 .datos h2 {
-    font-family: "Oxygen", sans-serif;
-    font-style: 'Light';
-    font-size: 34px;
-    line-height: 55.01px;   
-    line-height: 128%;
-    text-align: Center;
-    vertical-align: Top;
+    font: var(--fontBase);
+    font-size: 24px;
 }
 
 .datos p {
@@ -32,9 +27,9 @@
 }
 
 .testimony h2 {
-    font: var(--headline4);
+    font: var(--headline5);
 }
 
 .testimony p {
-    font:var(--headline5);
+    font:var(--caption);
 }
