--- a/project.css
+++ b/project.css
@@ -13,6 +13,10 @@
     gap: 16px;
 }
 
+.p1 {
+    flex-direction: row-reverse;
+}
+
 @media screen and (min-width: 768px) {
     .project {
         display: flex;
@@ -30,6 +34,7 @@
         width: 50%;
         align-items: center;
     }
+
 
     .project:nth-child(odd) .project-image{
         order: 2;
